# miband4-gtk

./: Cargo.toml  README.md  build.rs  miband4-gtk.desktop
.github/workflows/: release.yml
resources/: auth_key_dialog.ui  device_row.ui  resources.gresource.xml  style.css  window.ui
src/: band.rs  bluez.rs  main.rs  mpris.rs  notifications.rs  store.rs  utils.rs
src/ui/: auth_key_dialog.rs  device_info_card.rs  device_row.rs  device_row_object.rs  mod.rs  window.rs
src/ui/device_info/: battery.rs  card.rs  card_implementations.rs  mod.rs
