[package]
name = "mi_band_gtk"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
bluer = { version = "0.17.1", features = ["bluetoothd", "id"] }
cbc = "0.1.2"
chrono = "0.4.38"
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time", "io-util", "io-std"] }
tokio-stream = "0.1.15"
