[package]
name = "miband4-gtk"
version = "0.2.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
async-channel = "2.3.1"
async-fs = "2.1.2"
async-io = "2.3.3"
async-lock = "3.4.0"
async-net = "2.0.0"
cbc = "0.1.2"
chrono = "0.4.38"
env_logger = "0.11.3"
futures = "0.3.30"
futures-util = "0.3.30"
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_10"] }
log = "0.4.22"
serde = "1.0.203"
serde_json = "1.0.118"
zbus = "4.3.0"

[build-dependencies]
glib-build-tools = "0.19.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
